--- a/index.html
+++ b/index.html
@@ -35,11 +35,29 @@
     <p>Stay Motivated, Accountability, Organized and Inspired |||| Share your goals, Recommendations and Achievements</p>
     <button class="register" href="#">Click Here to Join</button>
   </div>
-  
+
+  <section class="process">
+    <span class="steps">
+      <img class="icon" src="css/img/step1.png"  alt="sign-up">
+      <h3>Sign Up</h3>
+      <p>Sign Up to begin working on your unique bucket list goals with an active community of people avidly checking things off and sharing their experiences.</p>
+    </span>
+    <span class="steps">
+      <img class="icon" src="css/img/step2.png"  alt="post">
+      <h3>Get Inspired</h3>
+      <p>Browse or post details about your bucket list adventures, goals and experiences to share with like-minded motivated people in the online community.</p>
+    </span>
+    <span class="steps">
+      <img class="icon" src="css/img/step3.png"  alt="share">
+      <h3>Share</h3>
+      <p>Share your epic bucket list adventures and accomplishments with friends and family to inspire them to start checking their own things off.</p>
+    </span>
+  </section>
+
   <div class="container home">   
     <div class="intro">
       <section class="top-content">
-        <h2>Featured Journal Images</h2>
+        <h3>Featured Journal Images</h3>
         <p>Bucket list is the app that allows you to draw out your dreams and aspirations for travel or accomplishment. When you check off an item on your list, you have the opportunity to add photos, journal entries and share the experience with friends and family. Check out some of our featured journal images submitted by our members from all around the globe</p>
       </section>
     </div>
