Updated Hero Image and Nav Bar

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Cinzel&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Russo+One|Ubuntu" rel="stylesheet">
   <link href="css/index.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/beea1cbe05.js"></script>
 </head>
 
 <body>
@@ -35,58 +36,52 @@
           <h2>Christian Rybarczyk</h2>
           <h3>Android Developer</h3>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolore sint ea velit, earum placeat dolor! Possimus culpa tempore dolorum ipsam </p>
-          <button class="git-button">GitHub Link</button>  
+        <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/Danika.png" alt="">
         <div class="member-info">
           <h2>Danika Thomson</h2>
-          <h3>User Interface Developer</h3>
+          <h3>User Interface</h3>
           <hr>
-          <p>Danika is from the UK studying Full Stack Web Dev with Lambda school.</p>
-          <button class="git-button">GitHub Link</button> 
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>
         </div>
       </span>
       <span class="profile">
         <img class ="profile" src="css/img/profile-img.png" alt="">
         <div class="member-info">
           <h2>Danielle Blackwell</h2>
-          <h3>Lorem ipsum dolor</h3>
+          <h3>Frontend Framework</h3>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolore sint ea velit, earum placeat dolor! Possimus culpa tempore dolorum ipsam </p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/profile-img.png" alt="">
         <div class="member-info">
           <h2>Eli Stacks</h2>
-          <h3>Frontend Framework Developer</h3>
+          <h3>Frontend Framework</h3>
           <hr>
-          <p>I hope this will actually get me a job in the end</p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/Giselle.png" alt="">
         <div class="member-info">
           <h2>Giselle Hargrove</h2>
-          <h3>Lorem ipsum dolor</h3>
+          <h3>Frontend Framework</h3>
           <hr>
-          <p>A United States veteran,  paralegal, aspiring to become a software engineer. I love the thrill and seeking adventures with my family.</p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div> 
       </span>
       <span class="profile">
         <img class ="profile" src="css/img/profile-img.png" alt=""> 
         <div class="member-info">
           <h2>Jessica Morrison</h2>
-          <h3>Frontend Framework Developer</h3>
+          <h3>Frontend Framework</h3>
           <hr>
-          <p>Front end developer currently living in Las Vegas, NV. Lover of coding, cats, and all things Golden Knights!</p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div> 
       </span>
       <span class="profile"> 
@@ -95,8 +90,7 @@
           <h2>Jonah Bergevin</h2>
           <h3>Project Lead</h3>
           <hr>
-          <p>In charge of meetings and distractions.</p>
-          <button class="git-button">GitHub Link</button> 
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile"> 
@@ -105,28 +99,25 @@
           <h2>Jordan Christensen</h2>
           <h3>iOS Developer </h3>
           <hr>
-          <p>From Salem, Ut. I love adventures, learning new things, and my doggo</p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/Matt.png" alt="">
         <div class="member-info">
           <h2>Matt Masters</h2>
-          <h3>Frontend Framework Developer</h3>
+          <h3>Frontend Framework</h3>
           <hr>
-          <p>Software Engineer from Dallas, TX. Loves my 4 dogs, cycling, and old video games.</p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div> 
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/profile-img.png" alt="">
         <div class="member-info">
           <h2>Marlon Raskin</h2>
-          <h3>Lorem ipsum dolor</h3>
+          <h3>Android Developer</h3>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolore sint ea velit, earum placeat dolor! Possimus culpa tempore dolorum ipsam </p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile"> 
@@ -135,49 +126,41 @@
           <h2>Matthew Nelson</h2>
           <h3>Android Developer</h3>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolore sint ea velit, earum placeat dolor! Possimus culpa tempore dolorum ipsam </p> 
-          <button class="git-button">GitHub Link</button> 
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile">
         <img class ="profile" src="css/img/Michael.png" alt=""> 
         <div class="member-info">
           <h2>Michael Harris</h2>
-          <h3>Backend Framework Developer</h3>
+          <h3>Backend Framework</h3>
           <hr> 
-          <p>As a web developer you are always learning, which I now love to learn. I am proud of the progress I've made and look forward to the future successes and failures. Every day I code there is a new challenge. Sometimes it gets very frustrating and I want to weep in the corner (looking at you Java) but I remember to stick to it.</p>
-          <button class="git-button">GitHub Link</button> 
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>
         </div> 
       </span>
       <span class="profile">
         <img class ="profile" src="css/img/Roy.PNG" alt=""> 
         <h2>Roy Wakumelo</h2> 
-        <h3>User Interface Developer</h3>
-        <div class="member-info">
-          <h3>iOS Developer </h3> 
-          <hr>
-          <p>Atlanta based programmer that loves technology, the outdoors, and spending time with my family.<d>
-          <button class="git-button">GitHub Link</button> 
-        </div>
+        <h3>User Interface </h3>
+        <hr>
+        <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/profile-img.png" alt="">
         <div class="member-info">
           <h2>Suffyan Tariq</h2>
-          <h3>Lorem ipsum dolor</h3>
+          <h3>Frontend Framework</h3>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolore sint ea velit, earum placeat dolor! Possimus culpa tempore dolorum ipsam </p>
-          <button class="git-button">GitHub Link</button>  
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/profile-img.png" alt="">
         <div class="member-info">
           <h2>Tyler Clawson</h2>
-          <h3>Lorem ipsum dolor</h3>
+          <h3>Android Developer</h3>
           <hr>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto dolore sint ea velit, earum placeat dolor! Possimus culpa tempore dolorum ipsam </p>
-          <button class="git-button">GitHub Link</button> 
+          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
     </div>
