--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
       </nav>
     </menu>
   </header>
-
-  <div>
-    <img class="header-img" src="css/img/homepage.jpg" alt="sunset image">
+  <div class="hero">
+    <div class="hero-image"></div>
   </div>
 
   <div class="call-to-action">
