Fixed An Error On Call to Action

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="call-to-action">
     <h2>Join Our Community Of Like-Minded People</h2><br>
-    <p>Stay Motivated, Accountability, Organized and Inspired |||| Share your goals, Recommendations and Achievements</p>
+    <p>Stay Motivated, Accountable, Organized and Inspired |||| Share your goals, Recommendations and Achievements</p>
     <button class="register" href="#">Click Here to Join</button>
   </div>
 
