Added GitHub links to team member profiles

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
           <h2>Christian Rybarczyk</h2>
           <h3>Android Developer</h3>
           <hr>
-        <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+        <button onclick=" window.open('https://github.com/Christian-Rybarczyk','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
@@ -45,7 +45,7 @@
           <h2>Danika Thomson</h2>
           <h3>User Interface</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>
+          <button onclick=" window.open('https://github.com/DanikaT','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>
         </div>
       </span>
       <span class="profile">
@@ -54,7 +54,7 @@
           <h2>Danielle Blackwell</h2>
           <h3>Frontend Framework</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+          <button onclick=" window.open('https://github.com/BleuxGenius','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
@@ -63,7 +63,7 @@
           <h2>Eli Stacks</h2>
           <h3>Frontend Framework</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
+          <button onclick=" window.open('https://github.com/Bastlifa','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile"> 
@@ -72,7 +72,7 @@
           <h2>Giselle Hargrove</h2>
           <h3>Frontend Framework</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+          <button onclick=" window.open('https://github.com/gisellehargrove','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div> 
       </span>
       <span class="profile">
@@ -81,7 +81,7 @@
           <h2>Jessica Morrison</h2>
           <h3>Frontend Framework</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+          <button onclick=" window.open('https://github.com/namistarr','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div> 
       </span>
       <span class="profile"> 
@@ -90,7 +90,7 @@
           <h2>Jonah Bergevin</h2>
           <h3>Project Lead</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
+          <button onclick=" window.open('https://github.com/JDB0rg','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile"> 
@@ -99,7 +99,7 @@
           <h2>Jordan Christensen</h2>
           <h3>iOS Developer </h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+          <button onclick=" window.open('https://github.com/mazjap','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
@@ -108,7 +108,7 @@
           <h2>Matt Masters</h2>
           <h3>Frontend Framework</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+          <button onclick=" window.open('https://github.com/TamaHills','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div> 
       </span>
       <span class="profile"> 
@@ -117,7 +117,7 @@
           <h2>Marlon Raskin</h2>
           <h3>Android Developer</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
+          <button onclick=" window.open('https://github.com/marlonjames71','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile"> 
@@ -126,7 +126,7 @@
           <h2>Matthew Nelson</h2>
           <h3>Android Developer</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
+          <button onclick=" window.open('https://github.com/05nelsonm','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
       <span class="profile">
@@ -135,7 +135,7 @@
           <h2>Michael Harris</h2>
           <h3>Backend Framework</h3>
           <hr> 
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>
+          <button onclick=" window.open('https://github.com/imMichaelHarris','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>
         </div> 
       </span>
       <span class="profile">
@@ -143,7 +143,7 @@
         <h2>Roy Wakumelo</h2> 
         <h3>User Interface </h3>
         <hr>
-        <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
+        <button onclick=" window.open('https://github.com/roywakumelojr','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
       </span>
       <span class="profile"> 
         <img class ="profile" src="css/img/profile-img.png" alt="">
@@ -151,7 +151,7 @@
           <h2>Suffyan Tariq</h2>
           <h3>Frontend Framework</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
+          <button onclick=" window.open('https://github.com/Suffyan-T','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button>  
         </div>
       </span>
       <span class="profile"> 
@@ -160,7 +160,7 @@
           <h2>Tyler Clawson</h2>
           <h3>Android Developer</h3>
           <hr>
-          <button class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
+          <button onclick=" window.open('https://github.com/tjclawson','_blank')" class="git-button"><i class="fab fa-github" id="git-icon"></i> GitHub</button> 
         </div>
       </span>
     </div>
